Add voice chat, PC opener, caja delivery, URL origin guard, and various improvements